[metadata]
name = description2html 
author = Vauxoo
author_email = info@vauxoo.com
summary = Script to generate index.html file from a README.rst file (odoo modules)
license = APGL3
home_page = https://github.com/Vauxoo-dev/gist-vauxoo
description-file = README.rst
requires-python = >=2.7.9
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages = description2html 

[entry_points]
console_scripts =
    description2html = description2html.description2html:main
